# FLex

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py  train_flex.sh  train_flexpo.sh  train_hexplane.sh
JuanScripts/CameraCalibration/: CharucoCamCalib.py
JuanScripts/FLexExperiments/: render_pc.py
JuanScripts/FlexScripts/: combine_pc.py  main_monodepth.py  test_functions.py
JuanScripts/StructureFromMotionExp/: pc_from_depthanything.py  sfm_exp.py  simple_projection_test.py
JuanScripts/data_processing/: OpticalFlowUtils.py  PoseUtils.py  StereoMis_video_to_frames.py  VideoUtils.py  images_to_gif.py  ircad_pigdataset_video_processing.py  pose_estimation_experiment.py  resize_images.py  video_to_frames.py
Robust-Pose/configuration/: infer_f2f_miti.yaml
Robust-Pose/dataset/: dataset_utils.py  image_dataset.py  rectification.py  stereo_dataset.py  train_datasets.py  transforms.py  video_dataset.py
Robust-Pose/evaluation/: evaluate_ate_freiburg.py  inspect_results.py  inspect_results_test.py  trajectory_plots.py
Robust-Pose/scripts/: change_image_seq.py  generate_back_forth_seq.py  generate_empty_masks.py  infer_trajectory.py  preprocess_image_data.py  preprocess_video_data.py  replicate_masks.py
Robust-Pose/viewer/: view_renderer.py  viewer2d.py  viewer3d.py
config/: 23_quick.yaml  config.py
flex/dataloader/: __init__.py  (+10 more)
local/: eval_poses.py  lr_scheduler.py  plot_pose_errors.py  util.py
new_pose_files/: new_pose_file_example.freiburg
notebooks/: depth_estimation.ipynb
scripts/: simple_render.py
(+79 files in other folders)
